# ethminer-gui

./: .gitignore  Cargo.toml  README.md  icon.pxo
src/: icon_data.rs  main.rs  miner_app.rs  miner_controller.rs  miner_settings.rs  miner_state.rs  tray.rs
