[package]
name = "ethminer-gui"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
eframe = "0.15.0"
serde = { version = "1", features = ["derive"], optional = true }
strum = "0.13.0"
strum_macros = "0.13.0"

[features]
default = []
persistence = ["eframe/persistence", "serde"]

[profile.release]
opt-level = 2
