[package]
name = "ethminer-gui"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
eframe = "0.17.0"
image = "0.24.2"
rfd = "0.9.1"
ksni = "0.2.0"
console = "0.15.0"
tokio = { version = "1.19.2", features = ["full"] }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = "1.0"
strum = "0.24.1"
strum_macros = "0.24.1"

[features]
default = ["persistence"]
persistence = ["eframe/persistence", "serde"]

[profile.release]
opt-level = 2
